_build/_log
### Starting build.
# Target: player.mli.depends, tags: { extension:mli, file:player.mli, ocaml, ocamldep, quiet }
ocamlfind ocamldep -modules player.mli > player.mli.depends
# Target: pokemon.mli.depends, tags: { extension:mli, file:pokemon.mli, ocaml, ocamldep, quiet }
ocamlfind ocamldep -modules pokemon.mli > pokemon.mli.depends
# Target: pokemon.cmi, tags: { byte, compile, extension:mli, file:pokemon.mli, interf, ocaml, quiet }
ocamlfind ocamlc -c -o pokemon.cmi pokemon.mli
+ ocamlfind ocamlc -c -o pokemon.cmi pokemon.mli
File "pokemon.mli", line 47, characters 21-35:
47 | val poke_from_json : Yojson.Basic.t -> t
                          ^^^^^^^^^^^^^^
Error: Unbound module Yojson
Command exited with code 2.
# Compilation unsuccessful.
